--- a/SquawCreekWebSite/HTML/css/main.css
+++ b/SquawCreekWebSite/HTML/css/main.css
@@ -198,3 +198,111 @@ div.main {
 .hide {
     display: none;
 }
+
+/* Style for the Shop page grid */
+/* Setting up our grid */
+.containerShop {
+	width: 1400px; /*Set the width of the entire website here */
+	margin-right: auto;
+	margin-left: auto; /* Margin-left and right are set to auto to center the container */
+}
+.seven:first-child,.eight:first-child, .nine:first-child, .ten:first-child,.eleven:first-child,.five:first-child, .four:first-child, .three:first-child, .two:first-child, .one:first-child, .six:first-child { 
+	margin-left: 0; /* This line of code makes the left-most column align to the left of the screen */
+}
+.eleven {
+	width: 91.5%;
+	float: left;
+	margin-left: 2%;
+}
+.ten {
+	width: 83%;
+	float: left;
+	margin-left: 2%;
+}
+.nine {
+	width: 74.5%;
+	float: left;
+	margin-left: 2%;
+}
+.eight {
+	width: 66%;
+	float: left;
+	margin-left: 2%;
+}
+.seven {
+	width: 57.5%;
+	float: left;
+	margin-left: 2%;
+}
+.six {
+	width: 49%; /* This div spans six columns (the entire row)*/
+	float: left;
+	margin-left: 2%;
+}
+.five {
+	width: 40.5%; /* This div spans five columns */
+	margin-left: 2%;
+	float:left;
+}
+.four {
+	width: 32%;
+	float:left;
+	margin-left: 2%;
+}
+.three {
+	width: 23.5%;
+	float:left;
+	margin-left: 2%;
+}
+.two {
+	width: 15%;
+	float:left;
+	margin-left: 2%;
+
+}
+.one {
+	width: 6.5%;
+	float:left;
+	margin-left: 2%;
+}
+.row {
+	width: 100%;
+	clear: both; /* Clear creates new styles for the next row */
+	padding: 0px;
+	margin: 0px;
+}
+
+.row3 .four {
+	height: 275px;
+	background-color: #27ae60;
+}
+
+.row4 .four {
+	height: 275px;
+	background-color: #2ecc71;
+}
+
+.row5 .four {
+	height: 275px;
+	background-color: #27ae60;
+}
+
+.shopPic {
+
+	padding-top: 5px;
+	padding-left: 120px;
+}
+
+.shopButton{
+	padding-top: 0px;
+	padding-left: 175px;
+}
+
+.shopText{
+	color: white;
+	text-align: center;
+	padding: 2px;
+	margin: 3px;
+	
+}
+/* End shop styling */
